patching issues with mobile header misalignment after branding refactor

--- a/frontend/src/styles/responsive.scss
+++ b/frontend/src/styles/responsive.scss
@@ -317,8 +317,6 @@
          position: absolute;
          width: 100vw;
          height: 100px;
-         top: 0px;
-         left: 0;
          background: $colHeaderBG;
          z-index: -1;
       }
